# stack-foundations

backend/fastapi_core_base/: .editorconfig  .pre-commit-config.yaml  .secrets.baseline  MANIFEST.in  Makefile  bitbucket-pipelines.yml  fix_docs.py  pyproject.toml  setup.py
backend/fastapi_core_base/docs/architecture/: Folder Structure.txt  folder_structure.md  package_recommendations.md  parquet_design_v4.md
backend/fastapi_core_base/docs/concepts/: DuckDB & Parquet.md
backend/fastapi_core_base/docs/technical/: architecture_patterns.md  db_system_specification.md  query_guide.md  routing_and_storage_guide.md
backend/fastapi_core_base/scripts/: generate_structure.py
backend/fastapi_core_base/src/app/: main.py  routes.py
backend/fastapi_core_base/src/app/extensions/: exception_handlers.py  openapi.py  setup_middlewares.py  startup_event.py
backend/fastapi_core_base/src/shared/: config.py
backend/fastapi_core_base/src/shared/configuration/: config.py  constants.py  email_notification_secret_manager.py  gcp_secret_manager.py  mtp_secret_manager.py  response.py  utils.py
backend/fastapi_core_base/src/shared/datadog/: __init__.py  config.py  constants.py  instrumentation.py  sampling.py  span_processor.py  tags.py  version.py
backend/fastapi_core_base/src/shared/db/: __init__.py  async_query_executor.py  base.py  bulk_query_executor.py  connections.py  constants.py  drivers.py  engine.py  mixin.py  models.py
backend/fastapi_core_base/src/shared/db/core/: connection_manager.py  path_resolver.py  session_guard.py  tenant_context.py
backend/fastapi_core_base/src/shared/db/engines/: adbc.py  bigquery.py  duckdb.py  postgres.py
backend/fastapi_core_base/src/shared/db/execution_lanes/: __init__.py  analytical.py  batch.py  bulk.py  transactional.py
backend/fastapi_core_base/src/shared/db/intelligence/: query_analyzer.py  watchdog.py
backend/fastapi_core_base/src/shared/db/schema/: models.py
backend/fastapi_core_base/src/shared/email_templates/: __init__.py  base.py  registry.py  routes.py
backend/fastapi_core_base/src/shared/email_templates/shared/: __init__.py  blocks.py  email_css.py  layout.py  utils.py
backend/fastapi_core_base/src/shared/email_templates/templates/: __init__.py
backend/fastapi_core_base/src/shared/email_templates/templates/data_ingestion/: __init__.py  renderer.py  schema.py  template.py
backend/fastapi_core_base/src/shared/email_templates/templates/strategy_failure/: __init__.py  renderer.py  schema.py  template.py
backend/fastapi_core_base/src/shared/exceptions/: __init__.py  base_exception.py  exception.py  exceptions_handler.py
backend/fastapi_core_base/src/shared/logging/: __init__.py  config_factory.py  constants.py  formatter.py  handler_factory.py  logger_factory.py  settings.py
backend/fastapi_core_base/src/shared/logging/configs/: application_config.py  base_interface.py  service_separated_config.py  uvicorn_config.py
backend/fastapi_core_base/src/shared/logging/formatters/: base_interface.py  color_formatter.py  detailed_formatter.py  mtp_formatter.py  simple_formatter.py  structured_formatter.py
backend/fastapi_core_base/src/shared/logging/handlers/: base_interface.py  datadog_handler.py  file_handler.py  terminal_handler.py
backend/fastapi_core_base/src/shared/middleware/: app_version.py  constants.py  cors.py  custom_route_handler.py  database.py  datadog.py  log_clear_middleware.py  maintenance.py  tenant.py
backend/fastapi_core_base/src/shared/notifier/: __init__.py  payloads.py  routes.py  settings.py  subjects.py
backend/fastapi_core_base/src/shared/notifier/providers/: __init__.py  email_provider.py  slack_provider.py
backend/fastapi_core_base/src/shared/services/: app_status_service.py  data_ingestion_notifier_service.py  database_service.py  email_template_service.py  logging_service.py  notifier_service.py  redis_service.py  slack_template_service.py  user_service.py
backend/fastapi_core_base/src/shared/slack_templates/: __init__.py  base.py  registry.py  routes.py
backend/fastapi_core_base/src/shared/slack_templates/shared/: __init__.py  blocks.py  utils.py
backend/fastapi_core_base/src/shared/slack_templates/templates/: __init__.py
backend/fastapi_core_base/src/shared/slack_templates/templates/data_ingestion/: __init__.py  renderer.py  schema.py  template.py
backend/fastapi_core_base/src/shared/slack_templates/templates/strategy_failure/: __init__.py  renderer.py  schema.py  template.py
backend/fastapi_core_base/src/shared/user_management/: constants.py  models.py  queries.py  routes.py  service.py  utils.py
backend/fastapi_core_base/tests/: TESTING.md  conftest.py
backend/fastapi_core_base/tests/app/: test_health_api.py  test_notifier_api.py  test_user_management_api.py
backend/fastapi_core_base/tests/shared/db/: conftest.py  test_connection_manager_integration.py  test_database_service_unit.py  test_query_analyzer_unit.py  test_session_guard_unit.py  test_transactional_integration.py  test_transactional_unit.py  test_watchdog_integration.py  test_watchdog_unit.py
backend/fastapi_core_base/toml_config/: cors.toml  databases.toml  datadog.toml  logging.toml  settings.toml
backend/fastapi_core_base/toml_config/clients/: balsamhill.toml  crackerbarrel.toml  homedepot.toml  lesliespool.toml  saksfifthavenue.toml
fastapi_core_base/: .gitignore
fastapi_core_base/docs/architecture/: uv setup.txt
